# b_list

./: .gitignore  .hgignore  LICENSE.txt  Procfile  README.rst  pyproject.toml  requirements.in  requirements.txt  runtime.txt
b_list/: context_processors.py  manage.py  requirements.txt  settings.py  urls.py  views.py  wsgi.py
b_list/static/b-list/css/: b-list-20180208.css  b-list-20180208.css.map  b-list-20180219.css  (+22 more)
b_list/templates/: 404.html  410.html  500.html  base.html  home.html
b_list/templates/blog/: base_blog.html  category_detail.html  category_list.html  entry_archive.html  entry_archive_day.html  entry_archive_month.html  entry_archive_year.html  entry_detail.html
b_list/templates/contact_form/: contact_form.html  contact_form.txt  contact_form_sent.html
b_list/templates/django_contact_form/: contact_form.html  contact_form_sent.html  contact_form_subject.txt
b_list/templates/feeds/: entry_description.html
b_list/templates/flatpages/: about.html  colophon.html  copyright.html  default.html  feeds.html
b_list/templates/projects/: base_project.html  project_detail.html  project_list.html
blog/: admin.py  feeds.py  markup.py  models.py  views.py
blog/migrations/: 0001_initial.py  0002_markupfield.py  0003_remove_markupfield.py  0004_begin_updated_date.py  0005_populate_updated_date.py  0006_updated_date_not_null.py
blog/templatetags/: markup.py  next_previous.py
blog/urls/: categories.py  entries.py  feeds.py
projects/: admin.py  apps.py  managers.py  models.py  urls.py  views.py
projects/migrations/: 0001_initial.py
(+5 files in other folders)
